<resources>
    <string name="app_name">Pop Movies</string>
    <string name="movie_detail">Movie Details</string>
    <string name="review_activity">Review Details</string>
    <string name="error_message">Could not load movies…</string>
    <string name="sort_name">Sort</string>
    <string name="favorite_sort_name">Favorites</string>
    <string name="thumbnail_content_description">Thumbnail</string>

    <string name="sample_movie_name">Chappie</string>
    <string name="sample_movie_year">2007</string>
    <string name="sample_movie_length">120</string>
    <string name="sample_movie_rating">8.1/10</string>
    <string name="sample_review">Sample Review</string>
    <string name="sample_trailer">Sample Trailer</string>

</resources>
