<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/frame_layout_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:background="@color/colorDarkTurquoise"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/sample_movie_name"
            android:textColor="@color/colorWhite"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_portrait"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movie_portrait"
            android:contentDescription="@string/thumbnail_content_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:src="@drawable/temp"
            app:layout_constraintBottom_toTopOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_portrait"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/sample_movie_year"
            android:textSize="28sp"
            app:layout_constraintLeft_toRightOf="@+id/movie_portrait"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/run_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/sample_movie_length"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toRightOf="@+id/movie_portrait"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/sample_movie_rating"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/movie_portrait"
            app:layout_constraintTop_toBottomOf="@+id/run_time" />

        <View
            android:id="@+id/line_above_review"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:background="@color/colorDarkTurquoise"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview_review"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line_above_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/line_above_trailer" />

        <View
            android:id="@+id/line_above_trailer"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:background="@color/colorDarkTurquoise"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview_trailer" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line_above_trailer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>